update min height to stop nav-bar jump 18 jun

--- a/frontend/tutor/src/components/Selection/Selection.css
+++ b/frontend/tutor/src/components/Selection/Selection.css
@@ -5,6 +5,7 @@
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  min-height:500px;
 }
 .selection-component-container h2 {
   color: #1a6c7b;
